Prepare API structure for Vertx